--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,13 +1,20 @@
+:root{
+  --silver: #96A0B5;
+  --black: #000;
+  --white: #fff;
+}
+
+
 * {
   box-sizing: border-box;
   padding: 0;
-  margin: 0;
+  margin: 0;  
 }
 
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow-x: hidden;  
 }
 
 a {
